--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "ts-node": "ts-node",
     "tsc": "tsc",
-    "clean:ts": "rm tsconfig.tsbuildinfo"
+    "clean:ts": "rm tsconfig.tsbuildinfo",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@swc/core": "^1.3.60",
+    "@swc/jest": "^0.2.26",
+    "@types/jest": "^29.5.1",
     "@types/node": "^20.2.5",
+    "jest": "^29.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
